@@ -1,33 +1,34 @@
-
 package net.mcreator.capitalmode.world.features.treedecorators;
 
-import net.minecraftforge.registries.RegisterEvent;
-import net.minecraftforge.registries.ForgeRegistries;
-import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.neoforge.registries.RegisterEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.bus.api.SubscribeEvent;
 
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecoratorType;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecorator;
 import net.minecraft.world.level.levelgen.feature.treedecorators.CocoaDecorator;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.Rotation;
+import net.minecraft.world.level.block.CocoaBlock;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.util.RandomSource;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.core.Direction;
 import net.minecraft.core.BlockPos;
 
 import java.util.List;
 
-import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
 
-@Mod.EventBusSubscriber(bus = Mod.EventBusSubscriber.Bus.MOD)
+@EventBusSubscriber
 public class InfinibiomeFruitDecorator extends CocoaDecorator {
-	public static Codec<InfinibiomeFruitDecorator> CODEC = Codec.unit(InfinibiomeFruitDecorator::new);
+	public static MapCodec<InfinibiomeFruitDecorator> CODEC = MapCodec.unit(InfinibiomeFruitDecorator::new);
 	public static TreeDecoratorType<?> DECORATOR_TYPE = new TreeDecoratorType<>(CODEC);
 
 	@SubscribeEvent
 	public static void registerTreeDecorator(RegisterEvent event) {
-		event.register(ForgeRegistries.Keys.TREE_DECORATOR_TYPES, registerHelper -> registerHelper.register("infinibiome_tree_fruit_decorator", DECORATOR_TYPE));
+		event.register(Registries.TREE_DECORATOR_TYPE, ResourceLocation.parse("capital_mode:infinibiome_tree_fruit_decorator"), () -> DECORATOR_TYPE);
 	}
 
 	public InfinibiomeFruitDecorator() {
@@ -44,28 +45,29 @@ public class InfinibiomeFruitDecorator extends CocoaDecorator {
 		RandomSource randomsource = context.random();
 		if (!(randomsource.nextFloat() >= 0.2F)) {
 			List<BlockPos> list = context.logs();
-			int i = list.get(0).getY();
-			list.stream().filter((p_69980_) -> {
-				return p_69980_.getY() - i <= 2;
-			}).forEach((p_226026_) -> {
-				for (Direction direction : Direction.Plane.HORIZONTAL) {
-					if (randomsource.nextFloat() <= 0.25F) {
-						Direction direction1 = direction.getOpposite();
-						BlockPos blockpos = p_226026_.offset(direction1.getStepX(), 0, direction1.getStepZ());
-						if (context.isAir(blockpos)) {
-							context.setBlock(blockpos, oriented(Blocks.AIR.defaultBlockState(), direction1));
+			if (!list.isEmpty()) {
+				int i = list.getFirst().getY();
+				list.stream().filter(p_69980_ -> p_69980_.getY() - i <= 2).forEach(p_226026_ -> {
+					for (Direction direction : Direction.Plane.HORIZONTAL) {
+						if (randomsource.nextFloat() <= 0.25F) {
+							Direction direction1 = direction.getOpposite();
+							BlockPos blockpos = p_226026_.offset(direction1.getStepX(), 0, direction1.getStepZ());
+							if (context.isAir(blockpos)) {
+								context.setBlock(blockpos, Blocks.COCOA.defaultBlockState().setValue(CocoaBlock.AGE, randomsource.nextInt(3)).setValue(CocoaBlock.FACING, direction));
+							}
 						}
 					}
-				}
-			});
+				});
+			}
 		}
 	}
 
+	@SuppressWarnings("deprecation")
 	private static BlockState oriented(BlockState blockstate, Direction direction) {
 		return switch (direction) {
-			case SOUTH -> blockstate.getBlock().rotate(blockstate, Rotation.CLOCKWISE_180);
-			case EAST -> blockstate.getBlock().rotate(blockstate, Rotation.CLOCKWISE_90);
-			case WEST -> blockstate.getBlock().rotate(blockstate, Rotation.COUNTERCLOCKWISE_90);
+			case SOUTH -> blockstate.rotate(Rotation.CLOCKWISE_180);
+			case EAST -> blockstate.rotate(Rotation.CLOCKWISE_90);
+			case WEST -> blockstate.rotate(Rotation.COUNTERCLOCKWISE_90);
 			default -> blockstate;
 		};
 	}
